# function-call-dynamic-query-demo

./: .env_sample.txt  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  azure.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.azure/: config
.devcontainer/: devcontainer.json
.github/workflows/: azure-deploy.yml  azure-dev.yml  deploy-infra.yml  deploying-infra-test.yml  main_hosting-fastapi.yml  python.yml
app/: entrypoint.sh  functions.py  main.py  models.py  pyproject.toml  requirements.txt  routes.py  setup_sql_database_role.py  start.sh
app/fastapi_app/: functions.py  main.py  models.py  routes.py
docs/: limitations.md
infra/: azuredeploy.parameters.json  main.bicep  main.parameters.json  main.paremeters.json
infra/core/ai/: openai.bicep
infra/core/database/: sql-database.bicep
infra/core/host/: applicationinsights.bicep  appservice.bicep
infra/core/identity/: roleAssignments.bicep  user-mi.bicep
scripts/: create-sq-user.sh  create-sql-user.ps1  create-sql-user.sh  fetch-principal-info.ps1  fetch-principal-info.sh  load_python_env.sh  requirements.txt  start.txt
test/: test_functions,py  test_main.py  test_routes.py
testing_code/: example_run.py  test_main.py  testing_database_connection.py  testing_database_exitence.py
tests/: example_run.py  test_main.py  testing_database_connection.py  testing_database_exitence.py
